Implemented resend activation email

--- a/userfrosting/templates/common/forgot-password.html
+++ b/userfrosting/templates/common/forgot-password.html
@@ -6,58 +6,39 @@
       {% include 'common/components/main-nav.html' %}
       <div class="jumbotron">
         <h1>Reset Password</h1>
-        {% if (confirm_ajax == 0) %}
         <p class="lead">
             Please enter your username and the email address you used to sign up.
             A link with instructions to reset your password will be emailed to you.
         </p>
-        {% else %}
-        <p class="lead">
-            Please enter your username and your new password to continue.
-        </p>
-        {% endif %}
         {% include 'common/components/alerts.html' %}
         <form class='form-horizontal' role='form' name='request_password_reset' action='{{site.uri.public}}/account/forgot-password' method='post'>
             {% include 'common/components/csrf.html' %}
             <div class="form-group">
-                <div class="col-md-offset-3 col-md-6">
-                    <input type="text" class="form-control" placeholder="Username" name = "user_name">
-                </div>
-            </div>
-            {% if (confirm_ajax == 0) %}
-            <div class="form-group">
-                <div class="col-md-offset-3 col-md-6">
-                    <input type="email" class="form-control" placeholder="Email" name="email">
-                </div>
-            </div>
-            {% else %}
-            <div class="form-group">
-                <div class="col-md-offset-3 col-md-6">
-                    <input type="password" class="form-control" placeholder="New Password" name = "password">
+                <label for="input_user_name" class="control-label col-sm-4">Username</label>
+                <div class="col-sm-8">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-fw fa-edit"></i></span>                    
+                        <input id="input_user_name" type="text" class="form-control" placeholder="Username" name="user_name">
+                    </div>
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-md-offset-3 col-md-6">
-                    <input type="password" class="form-control" placeholder="Password Confirm" name = "passwordc">
+                <label for="input_email" class="control-label col-sm-4">Email</label>
+                <div class="col-sm-8">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-fw fa-envelope"></i></span>                    
+                        <input id="input_email" type="text" class="form-control" placeholder="The email address you used to register" name="email">
+                    </div>
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-md-offset-3 col-md-6">
-                    <input type="hidden" class="form-control" name = "token" value="{{token}}">
-                </div>
-            </div>
-            {% endif %}
-            <div class="form-group">
-                <div class="col-md-12">
-                    <button type="submit" class="btn btn-success">Email Password Reset Link</button>
-                </div>
+                <button type="submit" class="btn btn-success">Email Password Reset Link</button>
             </div>
         </form>
       </div>	
     </div> <!-- /container -->
-    {% include 'common/components/footer.html' %}	
-
 </div> <!-- /container -->
+    {% include 'common/components/footer.html' %}
 <script>
     $(document).ready(function() {          
         // Process form 
