--- a/userfrosting/templates/common/reset-password.html
+++ b/userfrosting/templates/common/reset-password.html
@@ -13,29 +13,29 @@
         <form class="form-horizontal" role="form" name="reset_password" action="{{site.uri.public}}/account/reset-password" method="post">
             {% include 'common/components/csrf.html' %}
             <div class="form-group">
-                <label class="control-label col-sm-4">Username</label>
+                <label for="input_user_name" class="control-label col-sm-4">Username</label>
                 <div class="col-sm-8">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-fw fa-edit"></i></span>                    
-                        <input type="text" class="form-control" placeholder="Username" name="user_name">
+                        <input id="input_username" type="text" class="form-control" placeholder="Username" name="user_name">
                     </div>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-4">New Password</label>
+                <label for="input_password" class="control-label col-sm-4">New Password</label>
                 <div class="col-sm-8">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-fw fa-key"></i></span>                    
-                        <input type="password" class="form-control" placeholder="8-50 characters" name="password">
+                        <input id="input_password" type="password" class="form-control" placeholder="8-50 characters" name="password">
                     </div>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-4">Confirm New Password</label>
+                <label for="input_passwordc" class="control-label col-sm-4">Confirm New Password</label>
                 <div class="col-sm-8">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-fw fa-key"></i></span>                
-                        <input type="password" class="form-control" placeholder="Re-enter your new password" name="passwordc">
+                        <input id="input_passwordc" type="password" class="form-control" placeholder="Re-enter your new password" name="passwordc">
                     </div>
                 </div>
             </div>
