--- a/userfrosting/templates/themes/default/components/head.html
+++ b/userfrosting/templates/themes/default/components/head.html
@@ -15,7 +15,7 @@
     {% endfor %}
     
     <!-- Theme stylesheet -->
-    <link rel="stylesheet" href="{{site.uri.css}}theme.css" type="text/css" >
+    <link rel="stylesheet" href="{{site.uri.css}}theme.css?user={{user.id}}" type="text/css" >
     
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
