README and screenshots

--- a/userfrosting/templates/themes/default/dashboard.html
+++ b/userfrosting/templates/themes/default/dashboard.html
@@ -19,11 +19,16 @@
                     <div class="alert alert-success alert-dismissable">
                       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
                       Welcome to UserFrosting!  The dashboard and admin account features are based on the SB Admin 2 template by <a class="alert-link" href="http://startbootstrap.com">Start Bootstrap</a>. Other key frameworks and plugins used in this system are:
-                      <br><a class="alert-link" href='http://http://jquery.com/'>jQuery 1.10.2</a>
-                      <br><a class="alert-link" href='http://getbootstrap.com/'>Twitter Bootstrap 3.0</a>
+                      <br><a class="alert-link" href='http://www.slimframework.com/'>Slim</a>: a microframework for PHP
+                      <br><a class="alert-link" href='http://twig.sensiolabs.org/'>Twig</a>: The flexible, fast, and secure
+template engine for PHP                      
+                      <br><a class="alert-link" href='http://http://jquery.com/'>jQuery 1.11.2</a>
+                      <br><a class="alert-link" href='http://getbootstrap.com/'>Twitter Bootstrap 3.3.2</a>
                       <br><a class="alert-link" href='http://fontawesome.io/'>Font Awesome</a>
-                      <br><a class="alert-link" href='http://tablesorter.com/docs/'>Tablesorter 2.0</a>
+                      <br><a class="alert-link" href='http://formvalidation.io/'>FormValidation</a>: client-side input validation
+                      <br><a class="alert-link" href='http://tablesorter.com/docs/'>Tablesorter 2.17.7</a>: sortable, searchable tables
                       <br>The <a class="alert-link" href='http://www.bootstrap-switch.org/'>Bootstrap Switch</a> component by Mattia Larentis,Peter Stein, and Emanuele Marchi
+                      <br><a class="alert-link" href="https://select2.github.io/">Select2</a>: the jQuery replacement for search boxes
                       <br>All components are copyright of their respective creators.
                     </div>
                 </div>
