--- a/userfrosting/templates/common/home.html
+++ b/userfrosting/templates/common/home.html
@@ -6,7 +6,7 @@
         {% include 'common/components/main-nav.html' %}
       <div class="jumbotron">
         <h1>Welcome to UserFrosting!</h1>
-        <p class="lead">A secure, modern user management system based on UserCake, jQuery, and Bootstrap.</p>
+        <p class="lead">A secure, modern user management system based on the Slim Framework and the Twig templating engine.</p>
         {% include 'common/components/alerts.html' %}
         <div class="row">
             <div class="col-sm-12">
