--- a/userfrosting/templates/themes/default/site-settings.html
+++ b/userfrosting/templates/themes/default/site-settings.html
@@ -64,6 +64,17 @@
                             <a class="btn btn-link" href="{{site.uri.public}}/sliminfo">View Slim Info</a>
                         </div>
                     </div>
+                    <div class='panel panel-primary'>
+                        <div class='panel-heading'>
+                            <h3 class='panel-title'><i class='fa fa-wrench'></i> Admin Tools</h3>
+                        </div>
+                        <div class='panel-body'>
+                            <p>
+                                Rebuild minified CSS and JS: <a class="btn btn-primary" href="{{site.uri.public}}/config/build">Rebuild</a>
+                            </p>
+                            <p class="help-block">This may take some time, please be patient and wait for the page to refresh.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
