--- a/_includes/022/head.html
+++ b/_includes/022/head.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' |  prepend: site.url }}">
-    <link rel="shortcut icon" type="image/x-icon" href="{{site.url}}/img/cupcake.ico?v=2">
+    <link rel="shortcut icon" type="image/x-icon" href="{{site.url}}/img/cupcake.ico">
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{site.url}}/0.2.2/css/main.css">
