--- a/_includes/030/nav.html
+++ b/_includes/030/nav.html
@@ -28,9 +28,11 @@
                     <a href="{{site.url}}/#get-started">Get Started</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="{{site.url}}/#support">Support</a>
+                    <a href="{{site.url}}/#support">Help</a>
                 </li>
-                
+                <li>
+                    <a href="https://twitter.com/UserFrosting"><i class="fa fa-twitter"></i></a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
