--- a/_includes/030/nav.html
+++ b/_includes/030/nav.html
@@ -30,6 +30,9 @@
                 <li class="page-scroll">
                     <a href="{{site.url}}/#help">Help</a>
                 </li>
+                <li class="page-scroll">
+                    <a href="https://pledgie.com/campaigns/29583" class="nav-highlight">Donate</a>
+                </li>
                 <li>
                     <a href="https://twitter.com/UserFrosting"><i class="fa fa-twitter"></i></a>
                 </li>
