Suggested changes to UF Control Classes to Accomodate Plugins
1. Moved generate Captcha to base class
2. Updated themes to get the Site Title dynamically
3. Has the plugin init code
Updated the userfrosting-oauth plugin code on the other branch.

--- a/userfrosting/templates/common/components/footer.html
+++ b/userfrosting/templates/common/components/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <p>
-    &copy; <a href='http://www.userfrosting.com'>UserFrosting</a>, 2015
+    &copy; <a href='{{site.uri.public}}'>{{site.site_title}}</a>, 2015
     </p>
   </div>
 </footer>
