--- a/userfrosting/templates/themes/default/dashboard.html
+++ b/userfrosting/templates/themes/default/dashboard.html
@@ -19,7 +19,7 @@
                 <div class="col-lg-12">            
                     <div class="alert alert-success alert-dismissable">
                       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                      Welcome to UserFrosting!  The dashboard and admin account features are based on the SB Admin 2 template by <a class="alert-link" href="http://startbootstrap.com">Start Bootstrap</a>. Other key frameworks and plugins used in this system are:
+                      Welcome to {{site.site_title}}!  The dashboard and admin account features are based on the SB Admin 2 template by <a class="alert-link" href="http://startbootstrap.com">Start Bootstrap</a>. Other key frameworks and plugins used in this system are:
                       <br><a class="alert-link" href='http://www.slimframework.com/'>Slim</a>: a microframework for PHP
                       <br><a class="alert-link" href='http://twig.sensiolabs.org/'>Twig</a>: The flexible, fast, and secure
 template engine for PHP                      
