--- a/userfrosting/templates/themes/default/components/footer.html
+++ b/userfrosting/templates/themes/default/components/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <p>
-    &copy; <a href='http://www.userfrosting.com'>UserFrosting</a>, 2015
+    &copy; <a href='{{site.uri.public}}'>{{site.site_title}}</a>, 2015
     </p>
   </div>
 </footer>
