Added Terms and Conditions to settings and registration
The following are insert statements for the uf_configuration table.

INSERT INTO `uf_configuration` (`id`, `plugin`, `name`, `value`,
`description`)
VALUES
	(16, 'userfrosting', 'site_terms', 'These are the terms and conditions
for this site.\n1. Condition #1\n2. Condition #2\n.....\n\nLorem Ipsum
is simply dummy text of the printing and typesetting industry. Lorem
Ipsum has been the industry\'s standard dummy text ever since the
1500s, when an unknown printer took a galley of type and scrambled it
to make a type specimen book. It has survived not only five centuries,
but also the leap into electronic typesetting, remaining essentially
unchanged. It was popularised in the 1960s with the release of Letraset
sheets containing Lorem Ipsum passages, and more recently with desktop
publishing software like Aldus PageMaker including versions of Lorem
Ipsum.\n\nBy typing in the captcha i acknowledge that I have read and
accepted these terms and conditions', 'These are the terms and
conditions for this site.\n1. Condition #1\n2. Condition
#2\n.....\n\nBy typing in the captcha i acknowledge that I have read
and accepted these terms and conditions'),
	(17, 'userfrosting', 'show_terms_with_captcha', '1', 'This will show
terms and coniditions with the Captcha field for the user to accept');

--- a/userfrosting/templates/common/register.html
+++ b/userfrosting/templates/common/register.html
@@ -79,6 +79,16 @@
             {% if site.enable_captcha %}
             <div class="row">
                 <div class="col-sm-12">
+                    {% if site.show_terms_with_captcha %}
+                    <div class="panel panel-default">
+                      <div class="panel-heading">{{site.site_title}} - Terms and Conditions</div>
+                      <div class="panel-body">
+                        {{site.site_terms}}
+                    <div class="alert alert-info" role="alert"><small><u>By typing in the Captcha below I accept the following terms and conditions of {{site.site_title}}
+                            </u></small></div>
+                      </div>
+                    </div>                    
+                    {% endif %}
                     <div class="form-group">
                         <label class="control-label col-sm-4">Confirm captcha code</label>
                         <div class="col-sm-4">
