Edit and merge #364
Plugin loader, mobile-friendly modals, auto-update site settings, site
TOS

--- a/userfrosting/templates/common/components/footer.html
+++ b/userfrosting/templates/common/components/footer.html
@@ -1,8 +1,13 @@
 <footer>
   <div class="container">
-    <p>
-    &copy; <a href='{{site.uri.public}}'>{{site.site_title}}</a>, 2015
-    </p>
+    <div class="row">
+        <div class="col-sm-6 text-center">
+            &copy; <a href="{{site.uri.public}}">{{site.site_title}}</a>, {{ "now"|date("Y") }}
+        </div>
+        <div class="col-sm-6 text-center">
+            Built with <a href="http://www.userfrosting.com">UserFrosting</a>.
+        </div>        
+    </div>
   </div>
 </footer>
 <script src="{{site.uri.js}}config.js" ></script>
