--- a/userfrosting/templates/common/register.html
+++ b/userfrosting/templates/common/register.html
@@ -79,24 +79,6 @@
             {% if site.enable_captcha %}
             <div class="row">
                 <div class="col-sm-12">
-                    {% if site.show_terms_with_captcha %}
-                    <div class="panel panel-default">
-                      <div class="panel-heading">{{site.site_title}} - Terms and Conditions</div>
-                      <div class="panel-body">
-                        {{site.site_terms}}
-                    <div class="alert alert-info" role="alert">
-    <div class="input-group">
-        <input type="checkbox" aria-label="...">
-            <small>
-            <u>By typing in the Captcha below I accept the following terms and conditions of {{site.site_title}}
-            </u>
-            </small>
-    </div><!-- /input-group -->
-                        
-                    </div>
-                      </div>
-                    </div>                    
-                    {% endif %}
                     <div class="form-group">
                         <label class="control-label col-sm-4">Confirm captcha code</label>
                         <div class="col-sm-4">
@@ -108,6 +90,13 @@
                             <img src="{{captcha_image}}" id="captcha" data-target="#captcha-input">
                         </div>
                     </div>
+                </div>
+            </div>
+            {% endif %}
+            {% if site.show_terms_on_register %}
+            <div class="row">
+                <div class="col-sm-12">
+                     By registering an account with {{site.site_title}}, you accept the <a href="#" data-toggle="modal" data-target="#tos">terms and conditions</a>.
                 </div>
             </div>
             {% endif %}
@@ -127,7 +116,21 @@
         {% include 'common/components/jumbotron-links.html' %}	
       </div>	
     </div> <!-- /container -->
-    {% include 'common/components/footer.html' %}
+    
+    <div id="tos" class="modal fade" tabindex="-1" data-width="760" style="display: none;">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h4 class="modal-title">Terms and Conditions for {{site.site_title}}</h4>
+        </div>
+        <div class="modal-body">
+            {% include 'common/components/tos.html' %}	
+        </div>
+        <div class="modal-footer">
+            <button type="button" data-dismiss="modal" class="btn btn-primary">Got it!</button>
+        </div>
+    </div>
+    
+    {% include 'common/components/footer.html' %}    
     <script>
         $(document).ready(function() {           
          // Process form 
@@ -194,6 +197,7 @@
                 });
             };
         }( jQuery ));        
+        
     </script>
   </body>
 </html>
