--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -11,7 +11,7 @@
           
         <!-- Footer -->
         <footer class="text-center">
-            {% include 030/footer-page.html %}
+            {% include 030/footer-main.html %}
         </footer>
     </body>
 </html>
