--- a/userfrosting/templates/themes/default/components/footer.html
+++ b/userfrosting/templates/themes/default/components/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
         <div class="col-sm-6 text-left">
             &copy; <a href="{{site.uri.public}}">{{site.site_title}}</a>, {{ "now"|date("Y") }}
