--- a/userfrosting/templates/common/login.html
+++ b/userfrosting/templates/common/login.html
@@ -14,12 +14,21 @@
             <div class="row">
               <div class="col-md-offset-3 col-md-6">
                     <div class="form-group">
-                        <input type="text" class="form-control " name="user_name" autocomplete="off" value="" placeholder="{{ (site.email_login == 1) ? 'Username or Email' : 'Username' }}"   >
+                        <input type="text" class="form-control " name="user_name" autocomplete="off" value="" placeholder="{{ (site.email_login == 1) ? 'Username or Email' : 'Username' }}">
                     </div>
               </div>
               <div class="col-md-offset-3 col-md-6">
                 <div class="form-group">
-                    <input type="password" class="form-control " name="password" autocomplete="off" value="" placeholder="Password"   >
+                    <input type="password" class="form-control " name="password" autocomplete="off" value="" placeholder="Password">
+                </div>
+              </div>
+              <div class="col-md-offset-3 col-md-6">
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="rememberme"> Remember me
+                        </label>
+                    </div>
                 </div>
               </div>
               <div class="col-md-12">
